--- a/po/nb.po
+++ b/po/nb.po
@@ -13,7 +13,8 @@ msgstr ""
 "POT-Creation-Date: 2014-06-02 09:35+0800\n"
 "PO-Revision-Date: 2013-01-28 14:11+0000\n"
 "Last-Translator: Daniel <veillard@redhat.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: Norwegian Bokmål (http://www.transifex.com/projects/p/"
+"fedora/language/nb/)\n"
 "Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
