--- a/po/si.po
+++ b/po/si.po
@@ -11,7 +11,8 @@ msgstr ""
 "POT-Creation-Date: 2014-06-02 09:35+0800\n"
 "PO-Revision-Date: 2013-01-28 14:12+0000\n"
 "Last-Translator: Daniel <veillard@redhat.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: Sinhala (http://www.transifex.com/projects/p/"
+"fedora/language/si/)\n"
 "Language: si\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
