--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -12,7 +12,8 @@ msgstr ""
 "POT-Creation-Date: 2014-06-02 09:35+0800\n"
 "PO-Revision-Date: 2013-01-28 14:11+0000\n"
 "Last-Translator: Daniel <veillard@redhat.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: Serbian (Latin) (http://www.transifex.com/projects/p/"
+"fedora/language/sr@latin/)\n"
 "Language: sr@latin\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
