virsh: man: Fix examples and docs for virsh version
The version command now takes the --daemon parameter for a while and the
output example was pretty outdated.

Resolves: https://bugzilla.redhat.com/show_bug.cgi?id=1110673

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -206,23 +206,28 @@ option instead.  For example:
 
 quit this interactive terminal
 
-=item B<version>
+=item B<version> [I<--daemon>]
 
 Will print out the major version info about what this built from.
+If I<--daemon> is specified then the version of the libvirt daemon
+is included in the output.
 
 =over 4
 
 B<Example>
 
-B<virsh> version
+ $ virsh version
+ Compiled against library: libvirt 1.2.3
+ Using library: libvirt 1.2.3
+ Using API: QEMU 1.2.3
+ Running hypervisor: QEMU 2.0.50
 
-Compiled against library: libvir 0.0.6
-
-Using library: libvir 0.0.6
-
-Using API: Xen 3.0.0
-
-Running hypervisor: Xen 3.0.0
+ $ virsh version --daemon
+ Compiled against library: libvirt 1.2.3
+ Using library: libvirt 1.2.3
+ Using API: QEMU 1.2.3
+ Running hypervisor: QEMU 2.0.50
+ Running against daemon: 1.2.6
 
 =back
 
