Make 'uri' command a bit more prominent.
This tries to address

    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=688778

were libvirt autodetected vbox:///session and it wasn't listed in the
manpage.

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -272,6 +272,8 @@ connect to a local linux container
 
 =back
 
+To find the currently used URI, check the I<uri> command documented below.
+
 For remote access see the documentation page at
 L<http://libvirt.org/uri.html> on how to make URIs.
 The I<--readonly> option allows for read-only connection
