man: virsh: Add 'vcpu_period' and 'vcpu_quota' support info for LXC
Signed-off-by: Li Yang <liyang.fnst@cn.fujitsu.com>

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -1600,7 +1600,7 @@ I<domain>
 Allows you to show (and set) the domain scheduler parameters. The parameters
 available for each hypervisor are:
 
-LXC (posix scheduler) : cpu_shares
+LXC (posix scheduler) : cpu_shares, vcpu_period, vcpu_quota
 
 QEMU/KVM (posix scheduler): cpu_shares, vcpu_period, vcpu_quota,
 emulator_period, emulator_quota
