virsh: Fix comment for net-undefine
net-undefine doesn't only undefine an inactive network,
but also an active network(persistent), it just cannot
undefine a transient network.

Signed-off-by: Li Yang <liyang.fnst@cn.fujitsu.com>
Signed-off-by: Ján Tomko <jtomko@redhat.com>

--- a/tools/virsh.pod
+++ b/tools/virsh.pod
@@ -2590,7 +2590,8 @@ Start a (previously defined) inactive network.
 
 =item B<net-undefine> I<network>
 
-Undefine the configuration for an inactive network.
+Undefine the configuration for a persistent network. If the network is active,
+make it transient.
 
 =item B<net-uuid> I<network-name>
 
